2011-07-20  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12852]
	* posix/glob.c (glob): Check passed in values before using them in
	expressions to avoid some overflows.
	(glob_in_dir): Likewise.

	[BZ #13007]
	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): More complete
	check for AVX enablement so that we don't crash with old kernels and
	new hardware.
	* elf/tst-audit4.c: Add same checks here.
	* elf/tst-audit6.c: Likewise.

	* sysdeps/x86_64/bits/link.h (La_x86_64_ymm): Force 16-byte alignment.

2011-07-09  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/unix/sysv/linux/pathconf.c: Include <string.h>.

2011-07-20  Ulrich Drepper  <drepper@gmail.com>

	* po/cs.po: Update from translation team.
	* po/bg.po: Likewise.

2011-07-12  Marek Polacek  <mpolacek@redhat.com>

	* misc/sys/cdefs.h: Add support for const attribute.
	* sysdeps/unix/sysv/linux/sys/sysmacros.h: Add __attribute_const__
	to gnu_dev_{major,minor,makedev} functions.

2011-07-20  Marek Polacek  <mpolacek@redhat.com>

	* intl/dcigettext.c (get_output_charset): Add missing bracket.

2011-07-20  Andreas Schwab  <schwab@redhat.com>

	* resolv/res_query.c (__libc_res_nquerydomain): Use size_t for
	strlen results.

2011-07-13  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h
	(INTERNAL_VSYSCALL_NCS): Use r10 for backing up the return address
	register in order to avoid conflicts with the soft frame pointer
	being held in r11 when necessary.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep.h
	(INTERNAL_VSYSCALL_NCS): Likewise.

2011-07-14  Marek Polacek  <mpolacek@redhat.com>

	* elf/dl-fini.c (_dl_sort_fini): Remove unused link_map *l argument,
	* elf/dl-fini.c (_dl_fini): Adjust caller.
	* elf/dl-close.c (_dl_close_worker): Likewise.
	* sysdeps/generic/ldsodefs.h: Adjust declaration.

2011-07-15  Marek Polacek  <mpolacek@redhat.com>

	* elf/cache.c (load_aux_cache): Remove unnecessary condition of
	"aux_cache->nlibs < 0".
